--- a/style.css
+++ b/style.css
@@ -37,10 +37,14 @@ footer {
 /* specifieke stijlen */
 
 img.zweefLinks {
-    float: left;
-    margin-right: 15px;
+    float:right;
+    margin-right: 20px;
 }
 
+img.zweeflinks2 {
+    float:left;
+    margin-right: 15px;
+}
 .smalltext {
     font-size: 0.7em;
 }
