tekst geschreven en link gemaakt
Signed-off-by: Bentedb <112315@emmauscollege.nl>

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ main {
 
 article {
     text-align: justify;
-    clear: both;
+    
     
 }
 
@@ -54,7 +54,7 @@ p.tekst4 {
 
 /* specifieke stijlen */
 
-img.zweefLinks {
+img.zweeflinks {
     float:right;
     margin-right: 20px;
     margin-top: 15px;
