--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ img.zweeflinks {
     width: 350px;
     margin-left: 15px;
     margin-bottom: 10px;
-    border: 2px solve black;
+    border: 2px solid rgb(0, 0, 0);
 }
 
 img.zweeflinks2 {
@@ -67,6 +67,7 @@ img.zweeflinks2 {
     margin-top: 15px;
     width: 250px;
     margin-bottom: 15px;
+    border: 2px solid rgb(0, 0, 0)
 }
 
 img.kookboek {
