--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ article {
 
 
 header {
-    color: red;
+    color:  #5c676e;
     text-align: center;
 }
 
@@ -138,11 +138,11 @@ nav li a {
 }
 
 nav li a:hover {
-    background-color: #f1ce05;
+    background-color: #29c5bd;
 }
 
 nav li a.active {
-    background-color: blue;
+    background-color:  #4897b6;
 }
 
 
