--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ img.afbeelding {
     float: right;
     width: 300px;
     margin-left: 15px;
+     border: 2px solid rgb(0, 0, 0)
 }
 
 img.afbeeldingrechts {
@@ -86,6 +87,7 @@ img.afbeeldingrechts {
     width: 300px;
     margin-right: 15px;
     margin-bottom: 20px;
+     border: 2px solid rgb(0, 0, 0)
 
 }
 
