--- a/style.css
+++ b/style.css
@@ -122,6 +122,19 @@ a:hover {
     text-decoration: underline;
 }
 
+@keyframes slide {
+    0% {
+        left: -1000px;
+    }
+    100% {
+        left: 0px;
+    }
+}
+
+.slide  {
+    position: relative;
+    animation: slide 5s;
+}
 
 /* navigatiebalk */
 nav ul {
